<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.p4f.kareem.rad_eye_v2.FlightStatusByDate" android:background="@color/background">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        style="@style/flightByData_LinearLayout"
        android:id="@+id/l1">
    <EditText
        android:id="@+id/departure_airport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:inputType="textPersonName"
        android:hint="@string/airport_ex_kjfk"
        android:textColorHint="@color/placeHolderColor"
        android:textColor="@color/colorForeground"
        android:drawableEnd="@drawable/take_off"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/l2"
        android:layout_centerHorizontal="true"
        style="@style/flightByData_LinearLayout"
        android:layout_below="@id/l1">
    <EditText
        android:id="@+id/date_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="11"
        android:textColorHint="@color/placeHolderColor"
        android:hint="@string/date_ex_25_5_1997"
        android:textColor="@color/colorForeground"
        />
    <com.p4f.kareem.rad_eye_v2.FontAwesome
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calender_icon"
        android:textColor="@color/colorAccent"
        android:textSize="26sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/l3"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        style="@style/flightByData_LinearLayout"
        android:layout_below="@id/l2">
        <EditText
            android:id="@+id/arrival_airport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:textColorHint="@color/placeHolderColor"
            android:hint="@string/arrival_airport_ex_vhhh"
            android:drawableEnd="@drawable/landing"
            android:textColor="@color/colorForeground" />

    </LinearLayout>

    <Button
        android:id="@+id/findFlights"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:padding="3dp"
        android:background="@color/colorAccent"
        android:textColor="@color/colorForeground"
        android:text="@string/find_flights"
        android:layout_below="@id/l3"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
